--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     build: .
     volumes:
       - ./data:/usr/local/lib/data
-    ports:
-     - 3000:8080
+    # ports:
+    #  - 8095:8080
     restart: unless-stopped
 
 networks:
